--- a/index.html
+++ b/index.html
@@ -1,12 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- bootstrap link -->
+
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <!-- Option 1: Include in HTML -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
+
+    <!-- css link -->
 </head>
+
 <body>
-    
+    <!-- HEADER -->
+    <header>
+      <nav class="navbar navbar-expand-lg">
+  <div class="container-fluid ">
+    <a class="navbar-brand" href="#"><img class="img-fluid" src="./img/duck.png" alt=""></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu ">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+    </header>
+    <main class=" containser bg-black">
+        <!-- title section  -->
+        <section>
+            <!-- <h1>catalogo Libri</h1>
+            <button>aggiungi libro</button> -->
+        </section>
+
+        <!-- table section -->
+        <section>
+
+            <table class="table table-striped">
+                <tr>
+                    <td>aaa</td>
+                    <td><span class="badge text-bg-success">Success</span></td>
+                    <td><i class="bi bi-amazon"></i></td>
+                </tr>
+                <tr>
+                    <td>aaa</td>
+                    <td><span class="badge text-bg-success">Success</span></td>
+                    <td>ccc</td>
+                </tr>
+                <tr>
+                    <td>aaa</td>
+                    <td><span class="badge text-bg-success">Success</span></td>
+                    <td>ccc</td>
+                </tr>
+                <tr>
+                    <td>aaa</td>
+                    <td><span class="badge text-bg-success">Success</span></td>
+                    <td><button type="button" class="btn btn-outline-danger"><i class="bi bi-airplane"></i></button></td>
+                </tr>
+            </table>
+
+        </section>
+
+        <!-- Todo section -->
+        <section>
+
+            <ul class="list-group">
+  <li class="list-group-item">
+    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+    <label class="form-check-label" for="firstCheckbox">First checkbox</label>
+  </li>
+  <li class="list-group-item">
+    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+    <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
+  </li>
+  <li class="list-group-item">
+    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+    <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
+  </li>
+</ul>
+
+        </section>
+
+        <!-- FAQ section -->
+        <section></section>
+    </main>
+
 </body>
+
 </html>
