feat: section table completed

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cerca..." aria-label="Search" />
+                        
                         <button class="btn btn-outline-light" type="submit">Cerca</button>
                     </form>
                 </div>
@@ -58,7 +59,7 @@
         <!-- title section  -->
         <section class="d-flex justify-content-between mb-4 mt-4">
             <h1>Catalogo Libri</h1>
-            <button>aggiungi libro</button>
+            <button type="button" class="btn btn-primary btn-sm">Aggiungi Libro</button>    
         </section>
 
         <!-- table section -->
