--- a/index.html
+++ b/index.html
@@ -55,130 +55,228 @@
             </div>
         </nav>
     </header>
-    <main class=" container ">
+    <main>
         <!-- title section  -->
-        <section class="d-flex justify-content-between mb-4 mt-4">
+        <section class="container d-flex justify-content-between mb-4 mt-4">
             <h1>Catalogo Libri</h1>
             <button type="button" class="btn btn-primary btn-sm">Aggiungi Libro</button>
         </section>
 
         <!-- table section -->
-        <section>
+        <div class=" container ">
+            <div class="row">
+                <div class="col-6">
 
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Titolo</th>
-                        <th>Data prestito</th>
-                        <th>Stato</th>
-                        <th>Azioni</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td>i Pilastri della terra</td>
-                    <td>-</td>
-                    <td><span class="badge text-bg-success">Disponibile</span></td>
-                    <td><a href="" class="text-decoration-none text-reset"><i class="bi bi-pencil-square"></i> <i
-                                class="bi bi-trash"></i></a></td>
-                </tr>
-                <tr>
-                    <td>i Pilastri della terra</td>
-                    <td>-</td>
-                    <td><span class="badge text-bg-success">Disponibile</span></td>
-                    <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
-                                class="bi bi-trash"></i></a></td>
-                </tr>
-                <tr>
-                    <td>i Pilastri della terra</td>
-                    <td>14/10/2025</td>
-                    <td><span class="badge text-bg-warning">In prestito</span></td>
-                    <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
-                                class="bi bi-trash"></i></a></td>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Titolo</th>
+                                <th>Data prestito</th>
+                                <th>Stato</th>
+                                <th>Azioni</th>
+                            </tr>
+                        </thead>
+                        <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td><a href="" class="text-decoration-none text-reset"><i class="bi bi-pencil-square"></i>
+                                    <i class="bi bi-trash"></i></a></td>
+                        </tr>
+                        <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
+                        </tr>
+                        <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>14/10/2025</td>
+                            <td><span class="badge text-bg-warning">In prestito</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
 
-                </tr>
-                <tr>
-                    <td>i Pilastri della terra</td>
-                    <td>-</td>
-                    <td><span class="badge text-bg-danger">Non disponiile</span></td>
-                    <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
-                                class="bi bi-trash"></i></a></td>
+                        </tr>
+                        <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
 
-                </tr>
-            </table>
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
 
-        </section>
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
 
-        <!-- Todo section -->
-        <section class="mt-4 mb-4">
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
 
-            <div class="card border-secondary mb-3">
-                <div class="card-header">Todo</div>
-                <div class="card-body text-secondary">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-                            <label class="form-check-label" for="firstCheckbox">First checkbox</label>
-                        </li>
-                        <li class="list-group-item">
-                            <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                            <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
-                        </li>
-                        <li class="list-group-item">
-                            <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-                            <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
-                        </li>
-                    </ul>
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
+
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
+
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
+
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
+
+                        </tr>
+                          <tr>
+                            <td>i Pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="badge text-bg-danger">Non disponiile</span></td>
+                            <td><a href="" class="text-decoration-none"><i class="bi bi-pencil-square"></i> <i
+                                        class="bi bi-trash"></i></a></td>
+
+                        </tr>
+                    </table>
+
                 </div>
+
+                <!-- Todo section -->
+                <div class="mt-4 mb-4 col-6">
+                    <div>
+
+                        <div class="card border-secondary mb-3">
+                            <div class="card-header">Todo</div>
+                            <div class="card-body text-secondary">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <input class="form-check-input me-1" type="checkbox" value=""
+                                            id="firstCheckbox">
+                                        <label class="form-check-label" for="firstCheckbox">First checkbox</label>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <input class="form-check-input me-1" type="checkbox" value=""
+                                            id="secondCheckbox">
+                                        <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <input class="form-check-input me-1" type="checkbox" value=""
+                                            id="thirdCheckbox">
+                                        <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- FAQ section -->
+
+
+                    <section>
+
+                        <div class="card border-secondary mb-3">
+                            <div class="card-header">Header</div>
+                            <div class="card-body text-secondary">
+                                <div class="accordion accordion-flush" id="accordionFlushExample">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                aria-expanded="false" aria-controls="flush-collapseOne">
+                                                Accordion Item #1
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the
+                                                first item’s accordion body.</div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                                aria-expanded="false" aria-controls="flush-collapseTwo">
+                                                Accordion Item #2
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the
+                                                second item’s accordion body. Let’s imagine this being filled with some
+                                                actual content.</div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                                aria-expanded="false" aria-controls="flush-collapseThree">
+                                                Accordion Item #3
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the
+                                                third item’s accordion body. Nothing more exciting happening here in
+                                                terms
+                                                of content, but just filling up the space to make it look, at least at
+                                                first
+                                                glance, a bit more representative of how this would look in a real-world
+                                                application.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                </div>
+                </section>
             </div>
-        </section>
+        </div>
+        </div>
 
-        <!-- FAQ section -->
-
-
-        <section>
-
-            <div class="card border-secondary mb-3" >
-  <div class="card-header">Header</div>
-  <div class="card-body text-secondary">
-   <div class="accordion accordion-flush" id="accordionFlushExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-        Accordion Item #1
-      </button>
-    </h2>
-    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item’s accordion body.</div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-        Accordion Item #2
-      </button>
-    </h2>
-    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item’s accordion body. Let’s imagine this being filled with some actual content.</div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-        Accordion Item #3
-      </button>
-    </h2>
-    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item’s accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-    </div>
-  </div>
-</div>
-  </div>
-</div>
-          
-
-
-                </div>
-        </section>
     </main>
 
 </body>
