feat: name-titolo section completed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- table section -->
         <div class=" container ">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6">
 
                     <table class="table table-striped">
                         <thead>
@@ -175,7 +175,7 @@
                 </div>
 
                 <!-- Todo section -->
-                <div class="mt-4 mb-4 col-6">
+                <div class="mt-4 mb-4 col-lg-6">
                     <div>
 
                         <div class="card border-secondary mb-3">
@@ -278,7 +278,6 @@
         </div>
 
     </main>
-
-</body>
+    
 
 </html>
