--- a/newbook.html
+++ b/newbook.html
@@ -57,25 +57,40 @@
         <section class=" mb-4 mt-4">
             <h1>Nuovo Libro</h1>
         </section>
-        <div class="row">
-            <div class="col-6">Nome Autore</div>
-            <div class="col-6">CognomeAutore</div>
-            <div class="col-12">Titolo</div>
-            <div class="col-12">Genere</div>
-            <div class="col-12">Anno di Pubblicazione</div>
-            <div class="col-12">ISBN#</div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-12">Note</div>
-            <div class="col-12">Disponibile anche in digitale</div>
-            <div class="col-12">
-                <button type="button" class="btn btn-primary btn-sm">Aggiungi Libro</button>
+        <form action=" ">
+
+
+
+            <div class="row">
+                <div class="col-6 mt-2">
+                     <Label class="form-label" for ="Nome-Autore"><h2 class="fs-6">Nome Autore</h2></Label> 
+                     <Input class="form-control" type="text" id="Nome-Autore" required></Input>
+                    </div>
+                  <div class="col-6 mt-2">
+                     <Label class="form-label" for ="Cognome-Autore"><h2 class="fs-6">Cognome Autore</h2></Label> 
+                     <Input class="form-control" type="text" id="Nome-Autore" required></Input>
+                    </div>
+                <div class="col-12 mt-4">
+                     <Label class="form-label" for ="Titolo"><h2 class="fs-6">Titolo</h2></Label> 
+                     <Input class="form-control" type="text" id="Titolo" required></Input>
+                     <Label class="form-label" for ="Titolo"><p class="fs-6 text-body-tertiary">Titolo versione Italiana</p></Label> 
+
+                    </div>
+                <div class="col-12">Genere</div>
+                <div class="col-12">Anno di Pubblicazione</div>
+                <div class="col-12">ISBN#</div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-12">Note</div>
+                <div class="col-12">Disponibile anche in digitale</div>
+                <div class="col-12">
+                    <button type="button" class="btn btn-primary btn-sm">Aggiungi Libro</button>
+                </div>
+
             </div>
 
-        </div>
-
-
+        </form>
 
 
         <!-- Todo section -->
